<resources>
    <string name="app_name">海员通</string>
    <string name="url">https://www.baidu.com</string>
    <string name="appConfig">assets/appConfig.properties</string>
    <string name="qualification">海船船员适任证（大证）</string>
    <string name="certificate">海船船员培训合格证（小证）</string>
    <string name="captain">船长</string>
    <string name="cheif_officer">大副</string>
    <string name="second_officer">二副</string>
    <string name="third_officer">三副</string>
    <string name="Chief_engineer">轮机长</string>
    <string name="second_engineer">大管轮</string>
    <string name="third_engineer">二管轮</string>
    <string name="forth_engineer">三管轮</string>
    <string name="sailor">值班水手</string>
    <string name="motorman">值班机工</string>
    <string name="gmdss">GMDSS</string>
    <string name="z01">基本安全</string>
    <string name="z02">精通艇筏</string>
    <string name="z04">高级消防</string>
    <string name="z05">精通急救</string>
    <string name="z06">船上医护</string>
    <string name="z078">保安意识与职责</string>
    <string name="z09">保安员</string>
    <string name="t01">油化基本</string>
    <string name="t02">油船高级</string>
    <string name="t03">化学品高级</string>
    <string name="t06">客船</string>
    <string name="t07">大型船</string>
    <string name="t08">高速船</string>
    <string name="Z01">Z01</string>
    <string name="Z02">Z02</string>
    <string name="Z03">Z03</string>
    <string name="Z04">Z04</string>
    <string name="Z05">Z05</string>
    <string name="Z06">Z06</string>
    <string name="Z078">Z07/8</string>
    <string name="Z09">Z09</string>
    <string name="T01">T01</string>
    <string name="T02">T02</string>
    <string name="T03">T03</string>
    <string name="T04">T04</string>
    <string name="T05">T05</string>
    <string name="T06">T06</string>
    <string name="T07">T07</string>
    <string name="T08">T08</string>
    <string name="T09">T09</string>
    <string name="code">代码</string>
    <string name="descrip">说明部分</string>
    <string name="position">岗位</string>
    <string name="subject">subject</string>
    <string name="error">error</string>
    <string name="textview">TextView</string>
    <string name="currentposition">currentposition</string>
    <string name="currenttime">2020年10月16日</string>
    <string name="dafaultGPSmessage">没有获取到GPS信息</string>
    <string name="copyright">© 武汉交通职业学院</string>
    <string name="loading">正在加载数据……</string>
</resources>
